# science_catalogs

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  build-documentation.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
_results/gh-runner/: 2a0e7855-virtualenv-py3.12-Cython-build-packaging.json  5773ea4f-virtualenv-py3.12-Cython-build-packaging.json  57e8f449-virtualenv-py3.12-Cython-build-packaging.json  5f964b34-virtualenv-py3.12-Cython-build-packaging.json  79a000a3-virtualenv-py3.12-Cython-build-packaging.json  955d5dbb-virtualenv-py3.12-Cython-build-packaging.json  98fb2090-virtualenv-py3.12-Cython-build-packaging.json  b53fd3a1-virtualenv-py3.12-Cython-build-packaging.json  ca995b8a-virtualenv-py3.12-Cython-build-packaging.json
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  quickstart.rst
examples/configs/: des_dr2_mag_auto_dered.yml  lsst_dp02_cmodel_mag_dered.yml  lsst_dp1_cmodel_mag_dered.yml
examples/demo_catalog/: README.md  demo_all.py
examples/demo_catalog/configs/: demo_hats.yml  demo_parquet.yml
examples/demo_catalog/data/input/: demo_part_0.parquet  demo_part_1.parquet
examples/notebooks/: demo_notebook.ipynb
graphs/summary/: benchmarks.mem_list.json  benchmarks.time_computation.json
src/science_catalogs/: __init__.py  _version.py  catalog.py  cli.py  executor.py  pipeline.py  processing.py
src/science_catalogs/utils/: __init__.py  config.py  dust.py  io_readers.py  partitioning.py  writers.py
tests/: test_build_catalog.py  test_cli.py  test_config.py  test_example_configs.py  test_prepare_catalog.py  test_prepared_catalog.py  test_processing.py
tests/data/: README.md  des_dr2_sample_1000.fits  lsst_dp02_scrambled_sample_1000.parq  lsst_dp1_scrambled_sample_1000.parq
tests/science_catalogs/: test_packaging.py
